# orange3-survival-analysis

./: .coveragerc  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  README.pypi  meta.yml  pyproject.toml  setup.cfg  tox.ini
.github/: FUNDING.yml
.github/workflows/: lint.yml  release.yml  test.yml
doc/: conf.py  index.rst  widgets.json
doc/static/: custom.css
doc/widgets/: as-survival-data.md  cohorts.md  cox-regression.md  kaplan-meier-plot.md  rank-survival-features.md  stepwise-cox-regression.md
orangecontrib/survival_analysis/: __init__.py
orangecontrib/survival_analysis/evaluation/: __init__.py  scoring.py
orangecontrib/survival_analysis/modeling/: cox.py
orangecontrib/survival_analysis/tests/: test_deprecation.py
orangecontrib/survival_analysis/widgets/: __init__.py  data.py  owassurvivaldata.py  owchorts.py  owcoxregression.py  owkaplanmeier.py  owranksurvivalfeatures.py  owstepwisecoxregression.py  owsurvivalnomogram.py
orangecontrib/survival_analysis/widgets/tests/: test_owassurvivaldata.py  test_owkaplanmeier.py  test_owsurvivalnomogram.py
orangecontrib/survival_analysis/widgets/tests/datasets/: README.txt  melanoma.tab  toy_example.tab
