[metadata]
name = Orange3-Survival-Analysis
author = Bioinformatics Laboratory, FRI UL
author_email = info@biolab.si
maintainer = Jaka Kokosar
url = https://github.com/biolab/orange3-survival-analysis
project_urls =
    Bug Tracker = https://github.com/biolab/orange3-survival-analysis/issues
    Source Code = https://github.com/biolab/orange3-survival-analysis/
documentation_name = Survival Analysis
description = Survival Analysis add-on for Orange data mining software package.
long_description = file: README.pypi
long_description_content_type= text/markdown
keywords = 'orange3 add-on'
license = GPL3+
license_file = LICENSE

[options]
namespace_packages = orangecontrib
zip_safe = False
include_package_data = True
python_requires = >=3.9
packages = find:
setup_requires =
    setuptools>=42.0
    setuptools-scm
install_requires =
	Orange3>=3.34.0
	lifelines
	statsmodels

[options.extras_require]
doc =
	sphinx
	recommonmark
test =
    pytest
    coverage
    flake8
    flake8-bugbear
    black

[options.entry_points]
orange3.addon =
	survival=orangecontrib.survival_analysis
orange.widgets =
    Survival Analysis=orangecontrib.survival_analysis.widgets
orange.canvas.help =
    html-index=orangecontrib.survival_analysis.widgets:WIDGET_HELP_PATH

[flake8]
# Black compatibility
max-line-length = 88
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
     E203,
    # Ignore this since we use PyQt5 basically everywhere.
    N802,
    # https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
    E501
extend-select =
    B950,
ignore-names =
    settingsHandler
